Added Cow Journal
Added in a new journal for my beautiful wife's website

--- a/journal.html
+++ b/journal.html
@@ -23,7 +23,7 @@
 
     <ul style="list-style-type: none; padding: 0;">
         <li><a href="large-sketchbook.html"><u>large sketchbook</u></a></li>
-        <li><a href="https://en.wikipedia.org/wiki/Beauty_and_the_Beast_(1946_film)"><u>cow journal</u></a></li>
+        <li><a href="cow-journal.html"><u>cow journal</u></a></li>
         <li><a href="https://en.wikipedia.org/wiki/Beauty_and_the_Beast_(1946_film)"><u>binder</u></a></li>
         <li><a href="https://en.wikipedia.org/wiki/Beauty_and_the_Beast_(1946_film)"><u>hand made marker book</u></a></li>
         <li><a href="https://en.wikipedia.org/wiki/Beauty_and_the_Beast_(1946_film)"><u>black book</u></a></li>
