--- a/cow-journal.html
+++ b/cow-journal.html
@@ -14,34 +14,63 @@
 
 <main>
 
-    <div class="normal">
-        <img src="images/large-sketchbook/Page 1.jpg" alt="page 1">
+    <div class="row-1">
+
+        <div class="row-1-image">
+            <img src="images/cow-journal/Pic_1_.jpg" alt="page 2">
+        </div>
+
+        <div class="row-1-image">
+            <img src="images/cow-journal/Pic_2.jpg" alt="page 3">
+        </div>
+
     </div>
 
-    <div class="normal">
-        <img src="images/large-sketchbook/Pg 2.jpg" alt="page 2">
+    <div class="row-1">
+
+        <div class="row-1-image">
+            <img src="images/cow-journal/Pic_3.jpg" alt="page 4">
+        </div>
+
+        <div class="row-1-image">
+            <img src="images/cow-journal/Pic_4.jpg" alt="page 5">
+        </div>
+
     </div>
 
-    <div class="normal">
-        <img src="images/large-sketchbook/Pg 3.jpg" alt="page 3">
-    </div>
+    <div class="row-1">
 
-    <div class="normal">
-        <img src="images/large-sketchbook/Pg 4.jpg" alt="page 4">
+        <div class="row-1-image">
+            <img src="images/cow-journal/Pic_5.jpg" alt="page 6">
+        </div>
+
+        <div class="row-1-image">
+            <img src="images/cow-journal/Pic_7.jpg" alt="page 7">
+        </div>
+
     </div>
 
     <div class="row-1">
         <div class="row-1-image">
-            <img src="images/large-sketchbook/Pg_5_Poster_1.jpg" alt="page 5">
+            <img src="images/cow-journal/Pic_8.jpg" alt="page 8">
         </div>
 
         <div class="row-1-image">
-            <img src="images/large-sketchbook/Pg 5 poster 2.jpg" alt="page 6">
+            <img src="images/cow-journal/Pic_9_.jpg" alt="page 9">
         </div>
+
     </div>
 
-    <div class="normal">
-        <img src="images/large-sketchbook/Pg 6.jpg" alt="page 7">
+    <div class="row-1">
+
+        <div class="row-1-image">
+            <img src="images/cow-journal/Pic%2010.jpeg" alt="page 10">
+        </div>
+
+        <div class="row-1-image">
+            <img src="images/cow-journal/Pic%2011.jpeg" alt="page 11">
+        </div>
+
     </div>
 
 </main>
